Terraform/Ignore/kandu-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kendu
  annotations:
    kubernetes.io/change-cause: "why not"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kandu
  template:
    metadata:
      labels:
        app: kandu
    spec:
      containers:
        - image: adi1ophir/project:latest
          name: kandula-app
          ports:
            - containerPort: 5000
