Terraform/Ignore/kandu-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kandu
  labels:
    app: kandu
spec:
  containers:
    - image: adi1ophir/project:latest
      name: kandula-app
      ports:
        - containerPort: 5000
