Terraform/Ignore/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: kandula-app
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kandu
            port: 
              number: 5000
